2007-02-12  Lassi A. Tuura  <lat@iki.fi>

	* IgProfPool.cc (initFile): Create files in $IGPROF_TMPDIR if set.
	(push): Fix a bug in writing out the entry descriptor when stack
	depth is negative.  We protected everywhere else, but then claimed
	excessively large entry, confusing reading side.

2007-02-10  Lassi A. Tuura  <lat@iki.fi>

	* IgProfPool.h, IgProfPool.cc: Handle better situations where the
	pool fills up faster than the collector can empty it, to avoid
	burning large amounts of /tmp space.  Yield the CPU every few
	allocations, not just when the buffer is full, and in case that
	doesn't help, for example on a SMP system with free CPU capacity,
	force the thread off CPU by sleeping a bit every now and then.

	* IgProf.h, IgProf.cc, IgProfMem.cc, IgProfPerf.h, IgProfPerf.cc,
	IgProfFileDesc.cc: Simplify profiler module implementation and fix
	various minor issues in profiler initialisation and exit handling.
	Improve debugging output and diagnostics.  Always capture threads
	in the main profiler module instead of the performance profiler,
	then notify profiling modules about the threads.  Use basic atomic
	instructions instead of mutexes for profiler re-entry guards.  Use
	intermediate pools for collecting profile data for better memory
	profiling performance and to restore use of tosymbol() to reduce
	profile output.  Process intermediate profile data in parallel if
	threads are available.  Make sure externally visible names from
	the profiler include IgProf.  Record deleted entities in leak
	checking mode even if the profiler is inactive in order not to
	flag leaks incorrectly.  Use 10ms timer for performance profiling,
	asking for less makes reporting inaccurate: the signal may be
	delivered every 10ms even if setitimer() claims better resolution.

	* IgProfPool.h, IgProfPool.cc: New, implement a high-performance
	profile data gathering pool.  Used as an intermediate pool between
	the profilers and the collector sides in order to avoid all dead